components/books/envs/prod/calibre-web/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
spec:
  template:
    spec:
      containers:
        - name: calibre-web
          image: ghcr.io/linuxserver/calibre-web:0.6.27-ls403 # {"$imagepolicy": "flux-system:calibre-web"}
