components/books/envs/prod/calibre-web/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway-system
  hostnames:
    - calibre.${EXTERNAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Scheme
                value: https
              - name: X-Forwarded-Host
                value: calibre.${EXTERNAL_DOMAIN}
      backendRefs:
        - name: calibre-web
          port: 8083
